--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <div class="container">
+    <a href="weather.html">Click for the weather...</a>
      <h1>Ping Pong!</h1>
      <form id="ping-pong-form">
        <div class="form-group">
